--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ build_backend:
     - job: build_core
       artifacts: true
   script:
-    - mkdir ./BUILDS && mkdir ./BUILDS/backend && mkdir ./BUILDS/backend/dist
+    - mkdir ./BUILDS/backend && mkdir ./BUILDS/backend/dist
     - yarn workspace @TRPI/backend build
     - cp -r ./apps/backend/dist ./BUILDS/backend/dist
   artifacts:
@@ -77,7 +77,7 @@ build_frontend:
   stage: build
   needs: ["build_core"]
   script:
-    - mkdir ./BUILDS && mkdir ./BUILDS/frontend && mkdir ./BUILDS/frontend/dist
+    - mkdir ./BUILDS/frontend && mkdir ./BUILDS/frontend/dist
     # - yarn install --frozen-lockfile
     - yarn workspace @TRPI/frontend build
     - cp -r ./apps/frontend/dist ./BUILDS/frontend/dist
