--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,6 +52,8 @@ install_dependencies:
 
 build_core:
   stage: build
+  only:
+  - dev
   script:
     - mkdir ./BUILDS && mkdir ./BUILDS/core && mkdir ./BUILDS/core/dist
     - yarn workspace @TRPI/core build
@@ -61,6 +63,8 @@ build_core:
 
 build_backend:
   stage: build
+  only:
+  - dev
   needs: 
     - job: build_core
       artifacts: true
@@ -74,6 +78,8 @@ build_backend:
 
 build_frontend:
   stage: build
+  only:
+  - dev
   needs: ["build_core"]
   script:
     - mkdir ./BUILDS/frontend && mkdir ./BUILDS/frontend/dist
@@ -86,7 +92,7 @@ build_frontend:
 deploy_backend:
   stage: deploy
   only:
-    - dev
+    - staging
   needs: 
     - job: build_backend
       artifacts: true
@@ -96,12 +102,17 @@ deploy_backend:
     - ls -la
     - sudo -u ubuntu screen -S backend -X quit || true
     - sudo -u ubuntu screen -dmS backend
-    - sudo -u ubuntu screen -S backend -X stuff "cd ./BUILDS/backend/dist/; node dist/main"
+    - echo "MYSQL_HOST=$MYSQL_HOST" >> ./apps/backend/.env
+    - echo "MYSQL_PORT=$MYSQL_PORT" >> ./apps/backend/.env
+    - echo "MYSQL_USER=$MYSQL_USER" >> ./apps/backend/.env
+    - echo "MYSQL_PASSWORD=$MYSQL_PASSWORD" >> ./apps/backend/.env
+    - echo "MYSQL_DATABASE=$MYSQL_DATABASE" >> ./apps/backend/.env
+    - sudo -u ubuntu screen -S backend -X stuff "cd ./BUILDS/backend/dist/; node dist/main$(printf '\r')"
 
 deploy_frontend:
   stage: deploy
   only:
-    - dev
+    - staging
   needs: 
     - job: build_frontend
       artifacts: true
