--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ install_dependencies:
     untracked: true
   only:
     changes:
-      - ./package.json
+      - package.json
       - apps/backend/package.json
       - apps/client/package.json
       - apps/frontend/package.json
