--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,6 +71,11 @@ build_backend:
       artifacts: true
   script:
     # - mkdir ./BUILDS/backend && mkdir ./BUILDS/backend/dist
+    - echo 'MYSQL_HOST=$MYSQL_HOST' | sudo -u ubuntu tee -a ./apps/backend/.env
+    - echo 'MYSQL_PORT=$MYSQL_PORT' | sudo -u ubuntu tee -a ./apps/backend/.env
+    - echo 'MYSQL_USER=$MYSQL_USER' | sudo -u ubuntu tee -a ./apps/backend/.env
+    - echo 'MYSQL_PASSWORD=$MYSQL_PASSWORD' | sudo -u ubuntu tee -a ./apps/backend/.env
+    - echo 'MYSQL_DATABASE=$MYSQL_DATABASE' | sudo -u ubuntu tee -a ./apps/backend/.env
     - yarn workspace @TRPI/backend build
     - cp -r ./apps/backend/dist ./BUILDS/backend/dist
   artifacts:
@@ -104,11 +109,7 @@ deploy_backend:
     - ls -la
     - sudo -u ubuntu screen -S backend -X quit || true
     - sudo -u ubuntu screen -dmS backend
-    - sudo -u ubuntu screen -S backend -X stuff "echo 'MYSQL_HOST=$MYSQL_HOST' >> ./apps/backend/.env$(printf '\r')"
-    - sudo -u ubuntu screen -S backend -X stuff "echo 'MYSQL_PORT=$MYSQL_PORT' >> ./apps/backend/.env$(printf '\r')"
-    - sudo -u ubuntu screen -S backend -X stuff "echo 'MYSQL_USER=$MYSQL_USER' >> ./apps/backend/.env$(printf '\r')"
-    - sudo -u ubuntu screen -S backend -X stuff "echo 'MYSQL_PASSWORD=$MYSQL_PASSWORD' >> ./apps/backend/.env$(printf '\r')"
-    - sudo -u ubuntu screen -S backend -X stuff "echo 'MYSQL_DATABASE=$MYSQL_DATABASE' >> ./apps/backend/.env$(printf '\r')"
+
     - sudo -u ubuntu screen -S backend -X stuff "ls -la && cat .env && cd ./BUILDS/backend/dist/; node dist/main$(printf '\r')"
 
 deploy_frontend:
