--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -110,7 +110,7 @@ deploy_backend:
     - sudo -u ubuntu screen -S backend -X quit || true
     - sudo -u ubuntu screen -dmS backend
 
-    - sudo -u ubuntu screen -S backend -X stuff "ls -la && cat .env && cd ./BUILDS/backend/dist/; node dist/main$(printf '\r')"
+    - sudo -u ubuntu screen -S backend -X stuff "ls -la && cd ./BUILDS/backend/dist/; node dist/main$(printf '\r')"
 
 deploy_frontend:
   stage: deploy
