--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -113,11 +113,11 @@ deploy_backend:
     - sudo -u ubuntu screen -dmS backend
 
     # Create .env in the deployed dist folder inside screen session
-    - sudo -u ubuntu screen -S backend -X stuff "echo 'MYSQL_HOST=$MYSQL_HOST' >> ./BUILDS/backend/.env$(printf '\r')"
-    - sudo -u ubuntu screen -S backend -X stuff "echo 'MYSQL_PORT=$MYSQL_PORT' >> ./BUILDS/backend/.env$(printf '\r')"
-    - sudo -u ubuntu screen -S backend -X stuff "echo 'MYSQL_USER=$MYSQL_USER' >> ./BUILDS/backend/.env$(printf '\r')"
-    - sudo -u ubuntu screen -S backend -X stuff "echo 'MYSQL_PASSWORD=$MYSQL_PASSWORD' >> ./BUILDS/backend/.env$(printf '\r')"
-    - sudo -u ubuntu screen -S backend -X stuff "echo 'MYSQL_DATABASE=$MYSQL_DATABASE' >> ./BUILDS/backend/.env$(printf '\r')"
+    - sudo -u ubuntu sh -c "echo 'MYSQL_HOST=$MYSQL_HOST' | sudo tee -a ./BUILDS/backend/.env"
+    - sudo -u ubuntu sh -c "echo 'MYSQL_PORT=$MYSQL_PORT' | sudo tee -a ./BUILDS/backend/.env"
+    - sudo -u ubuntu sh -c "echo 'MYSQL_USER=$MYSQL_USER' | sudo tee -a ./BUILDS/backend/.env"
+    - sudo -u ubuntu sh -c "echo 'MYSQL_PASSWORD=$MYSQL_PASSWORD' | sudo tee -a ./BUILDS/backend/.env"
+    - sudo -u ubuntu sh -c "echo 'MYSQL_DATABASE=$MYSQL_DATABASE' | sudo tee -a ./BUILDS/backend/.env"
 
     - sudo -u ubuntu screen -S backend -X stuff "ls -la && cd ./BUILDS/backend/dist/; node main$(printf '\r')"
 
