--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -113,12 +113,11 @@ deploy_backend:
     - sudo -u ubuntu screen -dmS backend
 
     # Create .env in the deployed dist folder inside screen session
-    - sudo -u ubuntu sh -c "echo 'MYSQL_HOST=$MYSQL_HOST' | sudo tee -a ./BUILDS/backend/dist/.env"
-    - sudo -u ubuntu sh -c "echo 'MYSQL_PORT=$MYSQL_PORT' | sudo tee -a ./BUILDS/backend/dist/.env"
-    - sudo -u ubuntu sh -c "echo 'MYSQL_USER=$MYSQL_USER' | sudo tee -a ./BUILDS/backend/dist/.env"
-    - sudo -u ubuntu sh -c "echo 'MYSQL_PASSWORD=$MYSQL_PASSWORD' | sudo tee -a ./BUILDS/backend/dist/.env"
-    - sudo -u ubuntu sh -c "echo 'MYSQL_DATABASE=$MYSQL_DATABASE' | sudo tee -a ./BUILDS/backend/dist/.env"
-
+    - sudo -u ubuntu sh -c "echo 'MYSQL_HOST=$MYSQL_HOST' | sudo tee -a ./BUILDS/backend/dist/dist/.env"
+    - sudo -u ubuntu sh -c "echo 'MYSQL_PORT=$MYSQL_PORT' | sudo tee -a ./BUILDS/backend/dist/dist/.env"
+    - sudo -u ubuntu sh -c "echo 'MYSQL_USER=$MYSQL_USER' | sudo tee -a ./BUILDS/backend/dist/dist/.env"
+    - sudo -u ubuntu sh -c "echo 'MYSQL_PASSWORD=$MYSQL_PASSWORD' | sudo tee -a ./BUILDS/backend/dist/dist/.env"
+    - sudo -u ubuntu sh -c "echo 'MYSQL_DATABASE=$MYSQL_DATABASE' | sudo tee -a ./BUILDS/backend/dist/dist/.env"
     - sudo -u ubuntu screen -S backend -X stuff "ls -la && cd ./BUILDS/backend/dist/dist/; node main$(printf '\r')"
 
 deploy_frontend:
