--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "dependencies": {
     "@nestjs/cli": "^9.2.0",
-    "axios": "^1.3.4"
+    "axios": "^1.3.4",
+    "bcrypt": "^5.1.0"
   },
   "packageManager": "yarn@1.22.19"
 }
