--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -27,6 +27,7 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/devtools-integration": "^0.1.4",
     "@nestjs/jwt": "^10.0.2",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^9.0.3",
@@ -46,7 +47,9 @@
     "typeorm": "^0.3.12"
   },
   "devDependencies": {
+    "@TRPI/core": "*",
     "@nestjs/cli": "^9.0.0",
+    "@nestjs/devtools-integration": "^0.1.4",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
     "@types/bcrypt": "^5.0.0",
@@ -69,8 +72,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
-    "typescript": "^4.7.4",
-    "@TRPI/core": "*"
+    "typescript": "^4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
